# Patterns

./: README.md
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt
css/: README.md  button.css  chevron.css  combo-button.css  floating.css  hiding.css  menu.css  tree.css
html/: html5.html
js/: inherit.js  typecheck.js
js/table/: table.css  table.js
